fix: Ajustes e melhoria em logica de processos
